--- a/style.css
+++ b/style.css
@@ -91,3 +91,19 @@ h1 {
   text-decoration: none;
   text-align: center;
 }
+
+@media screen and (min-width: 64em) {
+  :root {
+    --horizontal-scroll-padding-right: 5em;
+  }
+
+  .horizontal-scroll {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    overflow: -moz-scrollbars-none; /* Firefox */
+  }
+
+  .horizontal-scroll::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+  }
+}
