--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --dark: #123a2c;
   --bh-light: #d9d8c5;
   --link-color: #6d6c62;
+  --divider-color: #d0cfbc;
   --header-dynamic-height: 7dvh;
   --header-height: 7vh;
   --main-dynamic-height: calc(100dvh - var(--header-dynamic-height));
