--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
   --divider-color: #d0cfbc;
   --header-dynamic-height: 7dvh;
   --header-height: 7vh;
-  /*  --main-dynamic-height: calc(100dvh - var(--header-dynamic-height));
-  --main-height: calc(100vh - var(--header-height));*/
+  --main-dynamic-height: calc(100dvh - var(--header-dynamic-height));
+  --main-height: calc(100vh - var(--header-height));
   --horizontal-scroll-padding-right: 1em;
 }
 * {
