feat services links closes #82

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
   --dark: #123a2c;
   --lighter-dark: #1d4437;
   --bh-light: #d9d8c5;
-  --link-color: #6d6c62;
   --divider-color: #d0cfbc;
   --error: #8b4343;
+  --link-color: #2d6461;
 
   --header-dynamic-height: 7dvh;
   --header-height: 7vh;
