chore add for #97

--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ body {
   background-color: var(--bh-light);
 }
 
-#app {
-  max-width: 70rem;
+#app, main {
   margin: 0 auto;
 }
 
+main {
+  max-width: 70rem;
+}
 body,
 input,
 button {
