feat enhance ui

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --bh-light: #d9d8c5;
   --divider-color: #d0cfbc;
   --error: #8b4343;
+  --success: #438b43;
   --link-color: #2d6461;
   --secondary-link-color: #5a78a0;
 
